--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.13.4",
     "marked": "^0.3.5",
     "morgan": "^1.7.0",
+    "path": "^0.12.7",
     "pg": "^4.5.5",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.22.0",
