--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Octowl/wikistack#readme",
   "dependencies": {
+    "bluebird": "^3.3.5",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "marked": "^0.3.5",
